# trabalho-final-pdb

./: Cargo.toml  README.md
page/: autocomplete_results.html  guess_row.html  index.html  styles.css
sql/: create.sql  daily-event.sql  queries.sql
src/: main.rs  queries.rs
