[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
tera = "1.19.1"
lazy_static = "1.4.0"
serde = "1.0.188"
uuid = { version = "1.4.1", features = [ "v4" ] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql" ] }
